# AserbaosAndroid

./: .editorconfig  .gitignore  README.md  app.apk  build.gradle  config.gradle  gradle.properties  gradlew  settings.gradle  test.txt  test1.txt  添加TextView的修改问题.patch
app/: CMakeLists.txt  build.gradle  proguard-rules.pro  visualgo_cn.html
app/aboutHtml/: heapsort.html  visualgo.html  visualgo_cn.html  会移动的文字.html
app/build /cache/: greendao-candidates.list
app/build /intermediates/assets/debug/: data.json
app/build /intermediates/incremental/debug-mergeJavaRes/: merge-state
app/build /intermediates/incremental/debug-mergeJniLibs/: merge-state
app/build /intermediates/incremental/mergeDebugAssets/: merger.xml
app/build /intermediates/incremental/mergeDebugJniLibFolders/: merger.xml
app/build /intermediates/incremental/mergeDebugResources/: compile-file-map.properties  merger.xml
app/build /intermediates/incremental/mergeDebugShaders/: merger.xml
app/build /intermediates/javaPrecompile/debug/: annotationProcessors.json
app/build /intermediates/res/debug/: output.json
app/build /intermediates/symbols/debug/: R.txt
app/build /outputs/logs/: manifest-merger-debug-report.txt
app/jni/: Android.mk  Application.mk  use_ndk_build.c  use_ndk_build2.c
app/src/main/: AndroidManifest.xml
app/src/main/assets/: aserbao.pem
app/src/main/assets/Shader/: vertex_texture.glsl
app/src/main/assets/demo/: demo.html  notice.html
app/src/main/assets/lottiefiles/: data1.json
app/src/main/cpp/num_one/: BeatDetektor.h  CMakeLists.txt  aserbao-one-lib.cpp  beat.h  beatDetektor2.h  spot_beat_detector.cpp
app/src/main/cpp/num_two/: aserbao-two-lib.cpp
app/src/main/java/: MANIFEST.MF
app/src/main/res/anim/: activity_alpha0_to_alpha1_anim.xml  activity_close.xml  activity_extend_and_portrait_anim.xml  activity_open.xml  activity_scale021_and_rotate_anim.xml  activity_scale021_and_translate_anim.xml  activity_scale120_and_translate_anim.xml  activity_top_to_screen_anim.xml
app/src/main/res/color/: cb_color_sel.xml  mtrl_text_btn_text_color_selector.xml  mtrls_btn_text_btn_ripple_color.xml  mtrls_btn_text_btn_ripple_color_bg.xml
app/src/main/res/drawable-v21/: ripple.xml  ripple_drawable.xml  ripple_oval.xml  (+4 more)
(+3799 files in other folders)
